Adicionado configuracao para Sonar